package com.shengsiyuan.dp.decorator;

public class LongBlack extends Coffee {

    public LongBlack() {
        setDes("longBlack");
        setPrice(5.0f);
    }
}
