package com.shengsiyuan.dp.decorator;

public class ShortBlack extends Coffee {

    public ShortBlack() {
        setDes("shortBlack");
        setPrice(4.0f);
    }
}
